--- a/.spellcheck.yml
+++ b/.spellcheck.yml
@@ -20,8 +20,8 @@ matrix:
         - open: '.. _'
           close: ':'
         # ignore images
-        - open: '^figure\.'
-          close: '^center\.'
+        - open: /figure/
+          close: /center/
 
   sources:
   # runs on the docs files
