--- a/.spellcheck.yml
+++ b/.spellcheck.yml
@@ -20,8 +20,8 @@ matrix:
         - open: '.. _'
           close: ':'
         # ignore images
-        - open: (figure)
-          close: (center)
+          - open: '\.\.\s+(figure)::'
+          close: '\n'
 
   sources:
   # runs on the docs files
