--- a/.spellcheck.yml
+++ b/.spellcheck.yml
@@ -23,8 +23,8 @@ matrix:
         - open: '\.\.\s+toctree::'
           close: '(?P<toctree>(?:((?P<indent>[ ]+).*$)|(\n))+)'
         # ignore directives
-        - open: '\.\.\s+(figure|include)::'
-          close: '(center)'
+        - open: '\.\.\s+(figure|include)::^.*^.*'
+          close: '$'
   sources:
   # runs on the docs files
   - 'docs/**/*.rst'
