--- a/.spellcheck.yml
+++ b/.spellcheck.yml
@@ -13,15 +13,18 @@ matrix:
   pipeline:
   #ignore urls 
   - pyspelling.filters.url:
+  #ignore html 
   - pyspelling.filters.html:
+  #ignore specific features
   - pyspelling.filters.context:
+      #ignore things meeting these conditions
       context_visible_first: true
       delimiters:
         # ignore tags
         - open: '.. _'
           close: ':'
         # ignore images, toctree, raw directives
-        - open: '(?s)^(?P<open> *)\.\. (toctree|figure|raw|cssclass|container)::'
+        - open: '(?s)^(?P<open> *)\.\. (toctree|figure|raw)::'
           close: '^(?!(?P=open) )'
   sources:
   # runs on the docs files
