--- a/.spellcheck.yml
+++ b/.spellcheck.yml
@@ -22,7 +22,7 @@ matrix:
         # ignore tags
         - open: '.. _'
           close: ':'
-        # ignore images, toctree, raw directives
+        # ignore these RST directives
         - open: '(?s)^(?P<open> *)\.\. (toctree|figure|raw|cssclass|container|list-table|literalinclude|include|json-value|jsonschema|csv-table-no-translate|code-block)::'
           close: '^(?!(?P=open) )'
         # ignore anything between two backticks 
